welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: ')' expected but '}' found.
  while(!posFinale()}{posSuivante()}
                    ^ColumnByColumn:1: error: ';' expected but '{' found.
  while(!posFinale()}{posSuivante()}
                     ^ColumnByColumn:4: error: expected class or object definition
def posFinale():Boolean ={
^ColumnByColumn:10: error: expected class or object definition
def posSuivante(){
^ColumnByColumn:23: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:26: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:29: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:32: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:35: error: Unmatched closing brace '}' ignored here
}
^